--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
       </div>
       <div class="menu">
         <div class="options">
-          <img src="/img/burger-pic.png" alt="burger" class="burger">
+          <img src="img/burger-pic.png" alt="burger" class="burger">
           <p class="cost">Гамбургер міні <span class="price"> 80 ГРН</span></p>
         </div>
         <div class="options">
-          <img src="/img/burger-pic.png" alt="burger" class="burger">
+          <img src="img/burger-pic.png" alt="burger" class="burger">
           <p class="cost">Гамбургер міні <span class="price">80 ГРН</span></p>
         </div>
         <div class="options">
-          <img src="/img/burger-pic.png" alt="burger" class="burger">
+          <img src="img/burger-pic.png" alt="burger" class="burger">
           <p class="cost">Гамбургер міні <span class="price">80 ГРН</span></p>
         </div>
       </div>
