--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.11/dist/css/uikit.min.css" />
+
 </head>
 
 <body>
-  <header class="header">
+  <header uk-scrollspy="uk-animation-slide-top" class="header">
     <nav>
       <div class="container-1">
         <div class="navbar">
@@ -53,7 +55,7 @@
       <button class="button">МЕНЮ</button>
     </div>
   </header>
-  <div class="cards">
+  <div uk-scrollspy="target: > div; cls: uk-animation-scale-down; delay: 200" class="cards">
     <div class="card">
       <img src="img/dish-icon.png" alt="dish-icon" class="icon">
       <h5 class="h-text">Магічна <col-1>Атмосфера</col-1>
@@ -73,7 +75,7 @@
       <p class="text">Ціна нашої їжі залежить тільки від її кількості. Якість завжди на висоті</p>
     </div>
   </div>
-  <div class="history-block">
+  <div uk-scrollspy="target:  .history-text>*; cls: uk-animation-scale-down; delay: 200" class="history-block">
     <div class="history-text">
       <h1 class="history-title">Наша <col-2>Історія</col-2>
       </h1>
@@ -83,7 +85,7 @@
         населеного пункту. Вдалині від цивілізації і в зв'язку з цим їм довелося вчасно облаштувати собі нехитрий побут,
         добувати і готувати собі їжу.
       </p>
-      <div class="stats">
+      <div uk-scrollspy="target: > p; cls: uk-animation-fade; delay: 200 " class="stats">
         <div class="info">
           <p class="num">93</p>
           <p class="name">Напої</p>
@@ -99,13 +101,15 @@
       </div>
     </div>
     <div class="history-images">
-      <img src="img/food.png" alt="picture" class="history-image image-1">
-      <img src="img/cake-pic.png" alt="picture" class="history-image image-2">
-      <img src="img/just-cool-pic.png" alt="picture" class="history-image image-3">
+      <img uk-scrollspy="uk-animation-slide-left-medium" src="img/food.png" alt="picture" class="history-image image-1">
+      <img uk-scrollspy="uk-animation-slide-top-medium" src="img/cake-pic.png" alt="picture"
+        class="history-image image-2">
+      <img uk-scrollspy="uk-animation-slide-right-medium" src="img/just-cool-pic.png" alt="picture"
+        class="history-image image-3">
     </div>
   </div>
-  <div class="offer-block">
-    <div class="offer-text">
+  <div uk-scrollspy="uk-animation-slide-left" class="offer-block">
+    <div uk-scrollspy="uk-animation-slide-bottom" class="offer-text">
       <p class="offer-title">Відсвяткуйте в одному з наших ресторанів.</p>
       <p class="offer-subtitle">Тільки цього місяця бізнес-ланч від 100 ГРН</p>
     </div>
@@ -114,22 +118,22 @@
     </div>
   </div>
   <div class="menu-block">
-    <h1 class="menu-title">Наші <col-2>Страви</col-2>
+    <h1 uk-scrollspy="uk-animation-slide-bottom" class="menu-title">Наші <col-2>Страви</col-2>
     </h1>
     <div class="menu-container">
-      <div class="img-block">
+      <div uk-scrollspy="uk-animation-slide-left" class="img-block">
 
       </div>
       <div class="menu">
-        <div class="options">
+        <div uk-scrollspy="uk-animation-slide-bottom" class="options">
           <img src="img/burger-pic.png" alt="burger" class="burger">
           <p class="cost">Гамбургер міні <span class="price"> 80 ГРН</span></p>
         </div>
-        <div class="options">
+        <div uk-scrollspy="uk-animation-slide-bottom" class="options">
           <img src="img/burger-pic.png" alt="burger" class="burger">
           <p class="cost">Гамбургер міні <span class="price">80 ГРН</span></p>
         </div>
-        <div class="options">
+        <div uk-scrollspy="uk-animation-slide-bottom" class="options">
           <img src="img/burger-pic.png" alt="burger" class="burger">
           <p class="cost">Гамбургер міні <span class="price">80 ГРН</span></p>
         </div>
@@ -137,5 +141,7 @@
     </div>
   </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.15.11/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.15.11/dist/js/uikit-icons.min.js"></script>
 
 </html>
